<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_follower</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="camilo89@hotmail.es">jclondonol</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path = "/home/jclondonol/ros2_ws/install/robot_follower/share/"/>
  </export>
</package>
